test/Fail/IlltypedPattern.err
IlltypedPattern.agda:9.5-9: error: [SplitError.NotADatatype]
Cannot split on argument of non-datatype A
when checking that the pattern zero has type A
